; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ppc-sysv-tdep.c_ppc_sysv_abi_broken_return_value.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ppc-sysv-tdep.c_ppc_sysv_abi_broken_return_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.type = type { i32 }
%struct.regcache = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ppc_sysv_abi_broken_return_value(%struct.gdbarch* %0, %struct.type* %1, %struct.regcache* %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.gdbarch*, align 8
  %7 = alloca %struct.type*, align 8
  %8 = alloca %struct.regcache*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %6, align 8
  store %struct.type* %1, %struct.type** %7, align 8
  store %struct.regcache* %2, %struct.regcache** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load %struct.gdbarch*, %struct.gdbarch** %6, align 8
  %12 = load %struct.type*, %struct.type** %7, align 8
  %13 = load %struct.regcache*, %struct.regcache** %8, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = call i32 @do_ppc_sysv_return_value(%struct.gdbarch* %11, %struct.type* %12, %struct.regcache* %13, i8* %14, i8* %15, i32 1)
  ret i32 %16
}

declare dso_local i32 @do_ppc_sysv_return_value(%struct.gdbarch*, %struct.type*, %struct.regcache*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
